# maldini

./: .env.example  .gitignore  CONTRIBUTING.md  Procfile  README.md  conftest.py  extract.py  ingest.py  pipeline.py  pyproject.toml  render.py  requirements.txt  results.py  workspace.yaml
.github/workflows/: weekly.yml
docs/: DATA_FORMAT.md  SETUP.md
maldini_dbt/: .user.yml  README.md  dbt_project.yml  profiles.yml
maldini_dbt/models/marts/: fct_predictions.sql  mart_competition_summary.sql  mart_monthly_scores.sql  mart_scores_summary.sql
maldini_dbt/models/staging/: sources.yml  stg_match_results.sql  stg_predictions.sql  stg_transcripts.sql
orchestration/: __init__.py  sensors.py
orchestration/assets/: dbt.py  ingestion.py  sources.py
src/dashboard/: cli_app.py  report_core.py  terminal_app.py  web_app.py
src/dashboard/templates/: report.html
src/extractor/: extract_predictions.py
src/ingest/: ingest_transcripts.py
src/maldini/: __init__.py  extract.py  pipeline.py  render.py  scoring.py
src/results/: fetch_results.py  ingest_results.py
templates/: report.html
tests/: test_extract.py  test_extract_predictions.py  test_fetch_results.py  test_ingest.py  test_ingest_transcripts.py  test_results.py  test_scoring.py
