[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maldini"
version = "0.1.0"
description = "Ingest, score and visualise @mundomaldini football predictions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tomás Ravalli" }]
dependencies = [
    "anthropic>=0.40.0",
    "google-api-python-client>=2.100.0",
    "youtube-transcript-api>=0.6.2",
    "requests>=2.31.0",
    "duckdb>=1.0.0",
    "pandas>=2.2.0",
    "pyarrow>=14.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
maldini-pipeline = "maldini.pipeline:main"
maldini-render = "maldini.render:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
